fix contrast in dark mode code highlighting

--- a/styles.scss
+++ b/styles.scss
@@ -41,6 +41,7 @@ $primary: #48206c; // navbar colour
         --code-bg: #373737; // code background colour
         --code-text: #faf9f8;
         --code-ot: #00e0e0;
+        --code-cf: #7DC1FF;
         --code-fu: #ffa07a;
         --code-st: #abe338;
         --code-sc: #abe338;
@@ -102,6 +103,11 @@ pre > code.sourceCode > span {
 
 code span.ot {
   color: var(--code-ot);
+  font-style: inherit;
+}
+
+code span.cf {
+  color: var(--code-cf);
   font-style: inherit;
 }
 
